--- a/.gitignore
+++ b/.gitignore
@@ -126,8 +126,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 /garbage/
-/terraform/provider_override.tf
-/terraform/local.auto.tfvars
+/terraform_s3/provider_override.tf
+/terraform_s3/local.auto.tfvars
 /terraform_dns/local.auto.tfvars
 /*/*.auto.tfvars
 /*/provider_override.tf
