--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -21,7 +21,7 @@ jobs:
       TF_VAR_base_domain: ${{ secrets.BASE_DOMAIN }}
       # override variables for conditionally run steps
       react_build_override: 'true'
-      terraform_apply_override: 'false'
+      terraform_apply_override: 'true'
       s3_deploy_override: 'true'
 
     strategy:
