--- a/future/FUTURE_terraform-wf.yml
+++ b/future/FUTURE_terraform-wf.yml
@@ -94,5 +94,5 @@ jobs:
       - name: Terraform Apply
         id: apply
         run: terraform apply -auto-approve
-        continue-on-error: true
+        continue-on-error: false
         working-directory: ${{inputs.terraform_directory}}
