--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@emotion/react": "^11.5.0",
     "@rebass/forms": "^4.0.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "graphql": "^15.7.1",
     "mdx.macro": "^0.2.9",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
