--- a/terraform_graphql/function/src/package.json
+++ b/terraform_graphql/function/src/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shelf/jest-dynamodb": "^2.1.0",
     "apollo-server": "^3.3.0",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "apollo-server-lambda": "^3.3.0",
+    "aws-sdk": "^2.1016.0",
     "express": "^4.17.1",
     "graphql": "^15.6.0",
     "uuid4": "^2.0.2"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.6"
   }
 }
