--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "graphql": "^15.7.1",
+    "lodash": "^4.17.21",
     "mdx.macro": "^0.2.9",
     "react": "^17.0.2",
     "react-code-blocks": "^0.0.9-0",
