change creation of var for REACT_APP_GRAPHQL_ENDPOINT

--- a/.github/workflows/buildNode.yml
+++ b/.github/workflows/buildNode.yml
@@ -270,7 +270,7 @@ jobs:
         id: setVarGraphQl
         run: |
           graphql_domain_endpoint=$(terraform output graphql_domain_endpoint)
-          echo "GRAPHQL_ENDPOINT=$graphql_domain_endpoint" >> $GITHUB_ENV
+          echo "REACT_APP_GRAPHQL_ENDPOINT=$graphql_domain_endpoint" >> $GITHUB_ENV
         working-directory: ./terraform_graphql
 
       ##############################
